--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -13,3 +13,24 @@ enableEmoji: true
 disableKinds: ["taxonomy", "term"]
 languageCode: "en-us"
 enableRobotsTXT: true
+privacy:
+  disqus:
+    disable: false
+  googleAnalytics:
+    disable: false
+    respectDoNotTrack: true
+  instagram:
+    disable: false
+    simple: false
+  vimeo:
+    disable: false
+    enableDNT: false
+    simple: false
+  x:
+    disable: false
+    enableDNT: false
+    simple: false
+  youTube:
+    disable: false
+    privacyEnhanced: false
+    
