--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
-# Hugo stuff
-.hugo_build.lock
-**/resources/_gen/
-/public
+# Created by https://www.toptal.com/developers/gitignore/api/hugo
+# Edit at https://www.toptal.com/developers/gitignore?templates=hugo
+
+### Hugo ###
+# Generated files by hugo
+/public/
+/resources/_gen/
+/assets/jsconfig.json
+hugo_stats.json
+
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
+
+# Temporary lock file while building
+/.hugo_build.lock
 
 # Apple stuff
 .DS_Store
+
+# End of https://www.toptal.com/developers/gitignore/api/hugo
